Added getReservationRequest impl
