# core-booking/src/main/kotlin/model/Reservation.kt
@@ -3,10 +3,17 @@ package model
 import java.time.LocalDateTime
 import java.util.UUID
 
-data class ReservationRequest(
+data class Reservation(
     val id: UUID,
     val userId: UUID,
     val bookId: UUID,
     val createdAt: LocalDateTime,
-    val status: String,
-)
+    val status: ReservationStatus,
+    val reason: String?,
+) {
+    enum class ReservationStatus {
+        SUCCESS,
+        FAILED;
+    }
+}
+
